components/apps/it-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: it-tools
  name: it-tools
