components/apps/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  ports:
  - name: it-tools
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: it-tools
  type: ClusterIP
