components/apps/it-tools/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`it-tools.redcomet.ca`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: it-tools
      port: 8080
